# LuaX

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GEMINI.md  README.md  autotest.bash  build_self.sh  clean_compile_self.sh  cpp_translator.lua  linkedlist.lua  main.lua  parse.lua  print_ast.lua  profile.md  sample.lua  setup.sh  stack.lua  test_debug  test_load.lua  tmp_test_ast.lua  translator.lua  vars.md
.agent/workflows/: optimize_library_creation.md
.agents/skills/updating_luax/: SKILL.md
examples/: main.lua  other_module.lua  test_debug.lua  test_for_loops.lua  test_metamethods.lua  test_multi_assign.lua  test_next.lua  test_pcall_error.lua  test_utf8.lua
examples/test_multifile_complex/: data.lua  utils.lua
examples/test_multifile_complex/math/: calc.lua
include/: coroutine.hpp  debug.hpp  init.hpp  io.hpp  lua_coroutine.hpp  lua_object.hpp  lua_value.hpp  math.hpp  os.hpp  package.hpp  pool_allocator.hpp  string.hpp  table.hpp  utf8.hpp
lib/: coroutine.cpp  debug.cpp  init.cpp  io.cpp  lua_object.cpp  math.cpp  os.cpp  package.cpp  string.cpp  table.cpp  utf8.cpp
scripts/: luax.lua
src/: ast_printer.lua  cpp_translator.lua  formatter.lua  luax.lua  main.lua  node.lua  other_module.lua  tokenizer.lua  translate_project.lua  translator.lua
tests/: bench_call.lua  bench_math.lua  bench_table.lua  main.lua  profile.lua  simple_test.lua  test_arg.lua  test_caching.lua  test_comma.lua  test_coroutines.lua  test_coroutines_comprehensive.lua  test_io.lua  test_minimal.lua  test_override.lua  test_package.lua  test_parallel.lua  test_self_fix.lua  test_string.lua  test_string_sub.lua  test_table_indexing.lua  test_ternary.lua  test_variadic.lua
tests/cpp_tests/: test_lua_object.cpp  test_string_table.cpp
tests/test_multifile_complex/: main.lua
